updated the circle shortcut and fixed the dot svg in header. Need to fix the shortcut positioning and rest of the alignments with items on the page.

--- a/funCSS/searchLayoutFun.css
+++ b/funCSS/searchLayoutFun.css
@@ -12,6 +12,7 @@
 body {
     background-color: #35363a;
     margin: 0;
+    padding: 0;
 }
 
 .wrapper {
@@ -47,9 +48,9 @@ body {
 }
 
 .gb {
-    width: 2rem;
-    height: 2rem;
-    margin: 0.375rem;
+    width: 1.563rem;
+    height: 1.563rem;
+    margin: -0.125rem;
 }
 
 .gb:hover {
@@ -84,7 +85,52 @@ main {
 
 .shortcut {
     padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    outline: 1px solid red;
+    justify-content: unset;
+    align-items: center;
+    margin-top: 25px;
+    font-family: "Roboto", sans-serif;
+    position: relative;
+
 }
+
+#addShort {
+    height: 3rem;
+    width: 3rem;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 50%;
+
+}
+
+
+.plus {
+    width: 1.4rem;
+    height: 1.4rem;
+    position: relative;
+    left: 0.75rem;
+    right: 0.75rem;
+    top: 0.813rem;
+
+}
+
+/*
+#addShort > .plus {
+
+}
+*/
+
+.plus > path {
+    fill: white;
+}
+
+/*
+.shortcut:hover {
+}
+*/
 
 
 .searchContainer > svg {
@@ -115,8 +161,8 @@ img {
 
 
 .footLink > .pencil {
-    height: 1rem;
-    width: 1rem;
+    height: 1.125rem;
+    width: 1.125rem;
 }
 
 .pencil > path {
